# auto-image-cropper

./: .gitignore  Cargo.toml  README.md
benchmarking/: benchmarks.txt
python/: auto-image-cropper.py  autocrop.py
src/: imagecrop.rs  lib.rs  main.rs
